--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Responsive Keyboard</title>
     <link rel="stylesheet" href="css/keyboard.css" />
-
+	<script type="text/javascript" src="http://scriptjava.net/source/scriptjava/scriptjava.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -102,8 +102,8 @@
     <div class="text-container">
         <textarea id="keyboardtarget" autofocus disabled></textarea>
     </div>
-
-    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+    
+	<script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
 <!--    <script src="js/keyboard.js"></script>-->
     <script src="js/analyzer.js"></script>
 </body>
